<resources>
    <string name="app_name">InterviewTest</string>
    <string name="google_maps_key">AIzaSyBfqWvbtt7yQkIZ8Xw3OobOBI5UTiEK-g0</string>


    <string name="text_no_data_available">No data available</string>
    <string name="text_place_name">Place Name</string>
    <string name="text_place_address">Place Address</string>
    <string name="text_place_description">Place Description</string>
    <string name="hint_place_name">Fill in place name</string>
    <string name="hint_place_address">Fill in place address</string>
    <string name="hint_place_description">Fill in place description</string>
    <string name="button_save">Save</string>
    <string name="content_description">Place Image</string>
    <string name="img_btn_edit_content_description">Edit icon</string>
    <string name="img_btn_delete_content_description">Delete icon</string>
    <string name="img_btn_direction_content_description">Direction icon</string>

    <string name="action_bar_title_list">List</string>
    <string name="action_bar_title_add">Add</string>
    <string name="action_bar_title_modify">Modify</string>
    <string name="action_bar_title_detail">Detail</string>
    <string name="action_bar_title_map">Map</string>

    <string name="txt_saving_dialog">Saving &#8230;</string>
    <string name="txt_delete_dialog">Deleting &#8230;</string>
    <string name="txt_finding_dialog">Finding &#8230;</string>
    <string name="txt_delete_alert_dialog">Do you want to delete </string>
    <string name="txt_delete_alert_dialog_title">Confirm delete &#8230;</string>
    <string name="txt_warning_alert_dialog_title">Warning</string>


    <string name="error_field_can_not_be_empty">Field can not be empty</string>
    <string name="error_google_play_services_not_available">Google Play Services is not available</string>
    <string name="error_get_location_error">Can not get place\'s location</string>
    <string name="error_get_direction_error">Can not get direction</string>
</resources>
