<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/row_place_layout_padding">


    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/row_place_card_layout_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgPlaceRow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/row_place_img_margin"
                android:src="@mipmap/ic_no_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtPlaceRow_PlaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginStart="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginRight="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginEnd="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginTop="@dimen/row_place_txt_margin_top"
                android:text="@string/text_place_name"
                app:layout_constraintLeft_toRightOf="@+id/imgPlaceRow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ibtnPlaceRow_Direction"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/txtPlaceRow_PlaceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginLeft="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginRight="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginStart="@dimen/row_place_txt_margin_start_end_left_right"
                android:layout_marginTop="@dimen/row_place_txt_margin_top"
                android:text="@string/text_place_address"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/imgPlaceRow"
                app:layout_constraintRight_toLeftOf="@+id/ibtnPlaceRow_Direction"
                app:layout_constraintTop_toBottomOf="@+id/txtPlaceRow_PlaceName" />

            <ImageButton
                android:id="@+id/ibtnPlaceRow_Direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/row_place_img_btn_margin"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:src="@mipmap/ic_direction"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/img_btn_direction_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                 />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>